<resources>
    <string name="app_name">Hello</string>
    <string name="sign_up">Sign up</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="your_journey_starts_here">Your journey starts here</string>
    <string name="phone_number">Phone number</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">Go back</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="apple">Apple</string>
    <string name="bear">Bear</string>
    <string name="cat">Cat</string>
    <string name="dog">Dog</string>
    <string name="elephant">Elephant</string>
    <string name="fish">Fish</string>
    <string name="goat">Goat</string>
    <string name="horse">Horse</string>
    <string name="reset_counter">Reset Counter</string>
    <string name="counter">Counter</string>
    <string name="at_least_3_letters">At least 3 letters</string>
    <string name="enter_a_valid_number_with_11_digits">enter a valid number with 11 digits</string>
    <string name="shared_preferences">Shared Preferences</string>
    <string name="add">Add</string>
    <string name="get">Get</string>
    <string name="internal_memory">Internal Memory</string>
    <string name="sqlite">SQLite</string>
</resources>